[gd_scene load_steps=9 format=3 uid="uid://bkhsehmct2sc6"]

[ext_resource type="Script" path="res://scripts/game_control.gd" id="1_7drca"]
[ext_resource type="PackedScene" uid="uid://cf3al74whb4yj" path="res://scenes/button.tscn" id="2_spen2"]
[ext_resource type="Texture2D" uid="uid://puhl53tegqcj" path="res://data/content/assets/options_button/options.png" id="3_etel6"]
[ext_resource type="Texture2D" uid="uid://dqj8i6k6gxeen" path="res://data/content/assets/options_button/optionsClick.png" id="4_xg8cq"]
[ext_resource type="Texture2D" uid="uid://bptgrxssa0q0d" path="res://data/content/assets/exit_button/exit.png" id="4_xq8vd"]
[ext_resource type="Texture2D" uid="uid://cyyhkq32nj51n" path="res://data/content/assets/exit_button/exitClick.png" id="6_nintp"]

[sub_resource type="LabelSettings" id="LabelSettings_mi2nj"]
font_color = Color(0.976471, 0.960784, 0.921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7y0t3"]
bg_color = Color(0.917647, 0.329412, 0.333333, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_detail = 10
anti_aliasing = false

[node name="Game2D" type="Node2D"]
script = ExtResource("1_7drca")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Margin" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Control/Margin"]

[node name="Background" type="ColorRect" parent="Control/Margin/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.168627, 0.356863, 1)

[node name="Textbox" type="ColorRect" parent="Control/Margin/CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.0
offset_top = -214.0
offset_right = 474.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.976471, 0.960784, 0.921569, 1)

[node name="Margin" type="MarginContainer" parent="Control/Margin/CanvasLayer/Background/Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Compliment" type="Label" parent="Control/Margin/CanvasLayer/Background/Textbox/Margin"]
custom_minimum_size = Vector2(918, 253)
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_mi2nj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureButton" parent="Control/Margin/CanvasLayer/Background" instance=ExtResource("2_spen2")]
texture_filter = 1
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.404
anchor_top = 0.613
anchor_right = 0.596
anchor_bottom = 0.955
offset_left = -0.40802
offset_top = -0.22403
offset_right = 0.407959
offset_bottom = 0.159973

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Panel" type="Panel" parent="Control/CanvasLayer"]
offset_left = -26.0
offset_top = 21.0
offset_right = 219.0
offset_bottom = 76.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7y0t3")

[node name="ConfigurationButton" type="TextureButton" parent="Control/CanvasLayer"]
offset_left = 108.0
offset_top = 17.0
offset_right = 171.0
offset_bottom = 80.0
texture_normal = ExtResource("3_etel6")
texture_pressed = ExtResource("4_xg8cq")
ignore_texture_size = true
stretch_mode = 4

[node name="ExitButton" type="TextureButton" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.026
anchor_right = 0.074
anchor_bottom = 0.123
offset_left = 0.112
offset_top = 0.152
offset_right = -0.248001
offset_bottom = 0.295998
size_flags_horizontal = 0
texture_normal = ExtResource("4_xq8vd")
texture_pressed = ExtResource("6_nintp")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="Control/Margin/CanvasLayer/Background/TextureButton" to="." method="_on_please"]
[connection signal="pressed" from="Control/CanvasLayer/ConfigurationButton" to="." method="nav_configuration"]
[connection signal="pressed" from="Control/CanvasLayer/ExitButton" to="." method="on_exit"]
